--- a/practice.html
+++ b/practice.html
@@ -13,8 +13,8 @@
     <h1>Profile</h1>
     <nav>
       <ul class="header-container">
-        <li class="header-item1">About</li>
-        <li class="header-item2">Bicycle</li>
+        <li class="header-item1"> <a href="#about">About</a></li>
+        <li class="header-item2"> <a href="#bicycle">Bicycle</a></li>
       </ul>
     </nav>
   </header>
@@ -38,18 +38,21 @@
     </section>
     <section id="bicycle" class="wrapper">
       <h2>Bicycle</h2>
-      <ul>
+      <ul class="bicycle_list">
         <li>
           <img src="./img/bicycle1.jpg" alt="">
-          <h3>タイトル</h3>
+          <h3 class="bicycle_title">タイトルタイトル</h3>
+          <p class="bicycle_content">テキストテキストテキスト</p>
         </li>
         <li>
           <img src="./img/bicycle2.jpg" alt="">
-          <h3>タイトル</h3>
+          <h3 class="bicycle_title">タイトルタイトル</h3>
+          <p class="bicycle_content">テキストテキストテキスト</p>
         </li>
         <li>
           <img src="./img/bicycle3.jpg" alt="">
-          <h3>タイトル</h3>
+          <h3 class="bicycle_title">タイトルタイトル</h3>
+          <p class="bicycle_content">テキストテキストテキスト</p>
         </li>
       </ul>
     </section>
