--- a/practice.html
+++ b/practice.html
@@ -56,7 +56,9 @@
         </li>
       </ul>
     </section>
-    <footer></footer>
+    <footer id="footer">
+      &copy; 2020 Profile
+    </footer>
   </main>
 </body>
 </html>
